<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnA"
                android:textSize="30sp" />

            <Button

                android:id="@+id/btnB"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnB"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnC"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnÇ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnÇ"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnD"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnE"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnE"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnG"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnĞ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnĞ"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnH"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnH"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnI"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnI"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnİ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="i"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnJ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnJ"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnK"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnK"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnL"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnL"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnM"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnN"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnN"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnO"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnO"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnÖ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnÖ"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnP"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnR"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnS"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnS"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnŞ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnŞ"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnT"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnU"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnU"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnÜ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnÜ"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnV"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnY"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnY"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnZ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="@string/btnZ"
                android:textSize="30sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/btnUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="lowercase"
                android:text="Lower Case"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="Space"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btnSymbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="UsingSymbolKeyBoard"
                android:text="123"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="SUBMIT"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="Letters"
                android:text="Delete"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>